--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width: 739px) {
-    html {
-        overflow-x: hidden;
+
+    .miss-text {
+        font-size: 12px;
     }
     .hide-on-mobile {
         display: none;
@@ -8,10 +9,23 @@
     #introduction .section-title, .section-title {
         font-size: 45px;
         padding: 0;
+        line-height: 60px;
+    }
+    .row {
+        margin: 0;
+    }
+    * {
+        max-width: 100vw;
+    }
+    .footer {
+        font-size: 13px;
     }
     #introduction .section-desc, .section-desc {
         padding: 0;
         font-size: 16px;
+    }
+    #introduction .btn {
+        margin-top: 20px;
     }
     #editor .right {
         margin-top: 100px;
@@ -22,7 +36,6 @@
     .man-img, .woman-img {
         width: 50px;
     }
-    
     .talk-1, .talk-2 {
         font-size: 14px;
     }
